# soulmate

./: .cache  .env  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.prod  LICENSE  README.md  build_log.txt  debug_log.txt  debug_metadata.json  debug_output.txt  docker-compose.prod.yml  docker-compose.yml  electron-builder.yml  package-lock.json  package.json  playlist_dump.html  playwright.config.ts  pyproject.toml  requirements.txt  start_https.sh  start_server.sh  tailwind.config.js  test_output.txt  tsconfig.json  tsconfig.node.json  tsconfig.web.json  users.json
.agent/rules/: soulmate-rules.md
.github/workflows/: ci.yml  release.yml
certs/: localhost-key.pem  localhost.pem
cloudflared/: config.yml
docs/: HOW_DOES_IT_WORK.md  MANUAL_TESTING.md  PLAN.md  SPECIFICATIONS.md  SPOTIFY_SETUP.md  TESTING_STRATEGY.md  TODO.md
resources/: slskd
scripts/: afterSign.js  debug_search.js  debug_signalr.js  download-binaries.ts  notarize.js  test-youtube-sr.js  test-yt-search.js  test-ytpl.js  test_db_read.js  validate-env.ts
slskd_local/config/: slskd.yml
slskd_local/data/: events.db  messaging.db  search.db  shares.local.bak.db  (+2 more)
src/: cli.py  downloader.py  main.py  soulseek_client.py  spotify_client.py
tests/: auth.spec.ts  conftest.py  core.spec.ts  guest-mode.spec.ts  lifecycle.spec.ts  locale-application.spec.ts  playlist-add.spec.ts  search-matching.spec.ts  settings-a11y.spec.ts  settings-localization.spec.ts  test_downloader.py  test_soulseek_client.py  test_spotify_client.py  youtube-playlist.spec.ts
(+78 files in other folders)
